[tool.poetry]
name = "zink"
version = "5.0.0"
description = "ElevenBits' website."
authors = ["Jan Willems <jan.willems@elevenbits.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.5"
django-environ = "^0.9.0"
psycopg2-binary  = "^2.9.5"
django-simple-menu = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
ipython = "^8.9.0"
httpie = "^3.2.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
omit = [
    "**/tests/*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
