[tool.poetry]
name = "zink"
version = "4.0.0"
description = ""
authors = ["Jan Willems <jan.willems@elevenbits.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^21.2.0"
django-treenode = "^0.21.0"
pillow = "^10.2.0"
pygments = "^2.14.0"
uvicorn = "^0.25.0"
markdown = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
